--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
     "mongoose": "^6.5.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.22"
   }
 }
