--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.3",
     "hbs": "^4.2.0",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.22"
